--- a/mus/mus.csproj
+++ b/mus/mus.csproj
@@ -7,4 +7,8 @@
     <Authors>Giles Shaw</Authors>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Text.Json" Version="5.0.2" />
+  </ItemGroup>
+
 </Project>
